Upcoming:
- Fixed a problem with cities generating under very high biomes. Sometimes pieces of the original landscape were still present
- Potentially fixed an issue correcting block states in a not-fully-generated chunk
- Fixed the check if a biome is an ocean or not

2.0.25-alpha:
- Fixed generation of bridges. They never really appeared
- Slightly changed the offset of lower mesh terrain gen so it always matches (remove configs for this to work)
- Fixed a problem where customizing a profile could cause crashes

2.0.24-alpha:
- Implemented a much better landscape correcting algorithm so that city chunks fit much better with adjacent high mountains or very low ocean chunks
- Vines are now handled in a much more efficient manner. Should avoid the TPS problems people were getting
- Oceans, rivers, and beaches are now recognized in a way that allows modded biomes to work too
- When a highway is generated it will no longer remove leaf blocks and logs above the highway
- When Lost Cities starts for the first time it will generate a config/lostcity_profiles folder containing standard profiles. As long as that folder exists Lost Cities will not do that again. You can alter/copy/remove profiles in that directory and they will be recognized automatically
- New 'saveprofile' command to save the current profile to a file (which you can then copy to config/lostcity_profiles)

2.0.23-alpha:
- Fixed a problem on servers

2.0.22-alpha:
- First port to 1.14.4!

2.0.21:
- Joseph added a more useful error message when invalid parts are configured

2.0.20:
- Fixed water level issue when combining biosphere with drowned cities, thanks to @3TUSK
- New parkChance profile option that allows you to control the chance that a non-building section will be a park section. If you set this to 0 you will only get streets
- wormzjl fixed explosion leaving a crater on water surface in submerged city style