@@ -2,6 +2,7 @@ Upcoming:
 - Fixed a problem with cities generating under very high biomes. Sometimes pieces of the original landscape were still present
 - Potentially fixed an issue correcting block states in a not-fully-generated chunk
 - Fixed the check if a biome is an ocean or not
+- Fixed the detection of biomes in general
 
 2.0.25-alpha:
 - Fixed generation of bridges. They never really appeared
